# pyneople

./: .env.example  .gitignore  labo.py  muu.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  pyneople.rst  requirements.txt  tutorial.md
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pyneople.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyneople.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
src/pyneople/: METADATA.py  api_to_mongo.py  character.py  functions.py  main.py  mongo_to_psql.py  mongo_to_psql_by_copy.py  mongo_to_psql_legacy.py  run_extract_to_mongo.py  run_transform_to_psql.py
src/pyneople/api/: api_processors.py  data_path_map.py  endpoint_definitions.py  endpoint_mapper.py  parser.py  seeder.py  url_builder.py
src/pyneople/config/: METADATA.py  config.py  endpoint_mapping.py  logger_config.py
src/pyneople/db/: endpoint_to_column_dtype_map.json
src/pyneople/legacy/: character_parser.py  database_connector_leagacy.py
src/pyneople/metadata/: generate_metadata.py  metadata_constants.py  metadata_generated.pkl  metadata_generated.py
src/pyneople/utils/: common.py  functions.py  monitoring.py  query_builder.py
src/pyneople/worker/: api_processors.py  worker.py
src/pyneople/workers/: api_fetch_worker.py  api_processors.py  base_worker.py  mongo_router.py  mongo_store_worker.py  mongo_to_psql_worker.py  queue_to_psql_worker.py  seeder.py
src/pyneople/wrapper/: endpoints.py  url_builder.py
(+60 files in other folders)
